--- a/cover-letter-generator/package.json
+++ b/cover-letter-generator/package.json
@@ -15,5 +15,9 @@
     "job-application"
   ],
   "author": "Clawdbot",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "blob-stream": "^0.1.3",
+    "pdfkit": "^0.17.2"
+  }
 }
